Working on the full dataset + parsing of diagnostic Codes - some of them make no sense

--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -32,22 +32,32 @@
    },
    "outputs": [],
    "source": [
-    "casos = pandas.read_csv('Venezolanas2/casos.csv', index_col = 0)\n",
-    "pacientes = pandas.read_csv('Venezolanas2/pacientes.csv', index_col = 0)\n",
+    "pathFolder = 'casos2019'\n",
+    "casos = pandas.read_csv(pathFolder + '/casos.csv', index_col = 0)\n",
+    "pacientes = pandas.read_csv(pathFolder + '/pacientes.csv', index_col = 0)\n",
     "pacientes.index = pacientes.index.map(str)\n",
     "\n",
-    "registros = pandas.read_csv('Venezolanas2/registros.csv', index_col = 0)\n",
+    "registros = pandas.read_csv(pathFolder + '/registros.csv', index_col = 0)\n",
     "registros.index = registros.index.map(str)\n",
     "\n",
     "#diagnosis = pandas.read_csv('Venezolanas2/diagnosis.csv', index_col = 0)\n",
-    "procedimientos = pandas.read_csv('Venezolanas2/procedimientos.csv', index_col = 0)\n",
+    "procedimientos = pandas.read_csv(pathFolder + '/procedimientos.csv', index_col = 0)\n",
     "procedimientos.index = procedimientos.index.map(str)\n",
     "\n",
     "procedimientosDesc = pandas.read_csv('Venezolanas2/procedimientosID.csv', index_col = 0)\n",
     "registrosByCaso = registros.groupby('Caso')\n",
     "\n",
-    "entriesInfirmery = pandas.read_csv('Venezolanas2/enfermeriaMedidas.csv', index_col = 0)\n",
+    "entriesInfirmery = pandas.read_csv(pathFolder + '/enfermeriaMedidas.csv', index_col = 0)\n",
     "entriesInfirmeryByCase = entriesInfirmery.groupby('IdAdmision')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diagnosticos = pandas.read_csv('Venezolanas2/diagnosis.csv', index_col = 0)"
    ]
   },
   {
@@ -58,7 +68,9 @@
    },
    "outputs": [],
    "source": [
-    "classificationProcedures = {'H2968': 'o', 'H2123' : 'o', 'H0165': 'o', 'H0193': 'o', 'H2120': 'o', 'H2379': 'o', 'H2383': 'o', 'H2386': 'o', 'H2407': 'o', 'H2415': 'o', 'H2595': 'o', 'H2684': 'o', 'H2849': 'o', 'H2852': 'o', 'H2880': 'o', 'H2882': 'o', 'H2884': 'o', 'H2892': 'o', 'H2901': 'o', 'H2904': 'o', 'H2910': 'o', 'H2916': 'o', 'H2959': 'o', 'H2963': 'o', 'H2974': 'a', 'H2975': 'a', 'H3038': 'o', 'H3065': 'o', 'H3066': 'o', 'H3078': 'o', 'H3089': 'p', 'H3092': 'p', 'H3094': 'p', 'H3099': 'a', 'H3100': 'a', 'H3108': 'o', 'H3109': 'o', 'H3111': 'o', 'H3114': 'o', 'H3118': 'o', 'H4421': 'o', 'H4494': 'o', 'H4496': 'o', 'HE020': 'o'}"
+    "classificationProcedures = {'H2968': 'o', 'H2123' : 'o', 'H0165': 'o', 'H0193': 'o', 'H2120': 'o', 'H2379': 'o', 'H2383': 'o', 'H2386': 'o', 'H2407': 'o', 'H2415': 'o', 'H2595': 'o', 'H2684': 'o', 'H2849': 'o', 'H2852': 'o', 'H2880': 'o', 'H2882': 'o', 'H2884': 'o', 'H2892': 'o', 'H2901': 'o', 'H2904': 'o', 'H2910': 'o', 'H2916': 'o', 'H2959': 'o', 'H2963': 'o', 'H2974': 'a', 'H2975': 'a', 'H3038': 'o', 'H3065': 'o', 'H3066': 'o', 'H3078': 'o', 'H3089': 'p', 'H3092': 'p', 'H3094': 'p', 'H3099': 'a', 'H3100': 'a', 'H3108': 'o', 'H3109': 'o', 'H3111': 'o', 'H3114': 'o', 'H3118': 'o', 'H4421': 'o', 'H4494': 'o', 'H4496': 'o', 'HE020': 'o'}\n",
+    "classificationProcedures['H2962'] = 'o'\n",
+    "classificationProcedures.update({'H2938': 'o', 'H2952': 'o', 'H3030': 'o', 'H2392': 'o', 'H3046': 'o', 'H2982': 'o', 'H2834': 'o', 'H2966': 'o', 'H2937': 'o', 'H2885': 'o', 'H2948': 'o', 'H2408': 'o', 'H2911': 'o', 'H4372': 'o', 'H3008': 'o', 'H2981': 'o', 'H2847': 'o', 'H2840': 'o', 'H2965': 'o', 'H0004': 'o', 'H2410': 'o', 'H2271': 'o', 'H2977': 'o', 'H3052': 'o', 'H2955': 'o', 'H2927': 'o', 'H3031': 'o', 'H2835': 'o', 'H3082': 'o', 'H2946': 'o', 'H3002': 'o', 'H2932': 'o', 'H2913': 'o', 'H3085': 'o', 'H2274': 'o', 'H2918': 'o', 'H3077': 'o', 'H1099': 'o', 'H2953': 'o', 'H4447': 'o', 'H3029': 'o', 'H2964': 'o', 'H3014': 'o', 'H3075': 'o', 'H2705': 'o', 'H3059': 'o', 'H2888': 'o', 'H6783': 'o', 'H2853': 'o', 'H2382': 'o', 'H3116': 'o', 'H2883': 'o', 'H4495': 'o', 'H3070': 'o', 'H2957': 'o', 'H2970': 'o', 'H2221': 'o', 'H3067': 'o', 'H3032': 'o', 'H2121': 'o', 'H3001': 'o', 'H3113': 'o', 'H2874': 'o', 'H2954': 'o', 'H4417': 'o', 'H2926': 'o', 'H2582': 'o', 'H2917': 'o'})"
    ]
   },
   {
@@ -85,6 +97,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -93,13 +112,23 @@
     "interventionToCase = {}\n",
     "caseToProcedureBirths = {}\n",
     "checkSeveralProcedures = []\n",
+    "unknownProc = []\n",
+    "procsNotFound = []\n",
     "for i,r  in tqdm.tqdm_notebook(registros.iterrows()):\n",
     "    if isinstance(r.RegistroXML, str) and '<row NombreCampo=\"IdDescripcion\"' in r.RegistroXML:\n",
     "        et = ET.fromstring(r.RegistroXML)\n",
     "        idDescripcionProcedimiento = et.find('.//row[@NombreCampo=\"IdDescripcion\"]').get('ValorCampo')\n",
+    "        if idDescripcionProcedimiento not in procedimientos.index:\n",
+    "            print('Procedimiento asociado con caso %s no se encuentra (# %s)' % (r.Caso, idDescripcionProcedimiento))\n",
+    "            continue\n",
     "        interventionToCase[idDescripcionProcedimiento] = (r.Caso, r.NumeroHistoria, i)\n",
     "        procedureType = re.findall('<idProcedimiento>([a-zA-Z0-9]*)</idProcedimiento>', procedimientos.loc[idDescripcionProcedimiento].XmlDescripcion)[0]\n",
-    "        if classificationProcedures[procedureType] == 'p':\n",
+    "        try:\n",
+    "            typeProc = classificationProcedures[procedureType]\n",
+    "        except:\n",
+    "            typeProc = 'unknown'\n",
+    "            unknownProc.append(procedureType)\n",
+    "        if typeProc == 'p':\n",
     "            \n",
     "            #If it is the case that they need to stop labour because a c-section is needed\n",
     "            if '<postDiagnosticoPrincipal>O821 - PARTO POR CESAREA DE EMERGENCIA</postDiagnosticoPrincipal>' in \\\n",
@@ -113,11 +142,47 @@
     "                    continue\n",
     "                else:\n",
     "                    checkSeveralProcedures.append(r.Caso)\n",
-    "                    print('error', r.Caso)\n",
+    "                    print('error, varios procedimientos en caso: ', r.Caso)\n",
     "                    if r1.FechaRegistro > r2.FechaRegistro:\n",
     "                        caseToProcedureBirths[r.Caso] = procedimientos.loc[idDescripcionProcedimiento]\n",
     "            else:\n",
     "                caseToProcedureBirths[r.Caso] = procedimientos.loc[idDescripcionProcedimiento]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(p.IdPaciente                                                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registrosByCaso.get_group(c).NumeroHistoria, p.IdPaciente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "186416 in registrosByCaso.get_group(c).NumeroHistoria.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countPatientNotFound"
    ]
   },
   {
@@ -133,17 +198,36 @@
     "# Split in newborn\n",
     "registrosByCaso = registros.groupby('Caso')\n",
     "processedDatasets = {}\n",
+    "countCaseNotFound = 0\n",
+    "countPatientNotFound = 0\n",
+    "\n",
     "for c, p in tqdm.tqdm_notebook(caseToProcedureBirths.items()):\n",
     "    if c not in casos.index:\n",
-    "        print('ERROR!', c)\n",
+    "        print('ERROR! Caso no encontrado', c)\n",
+    "        countCaseNotFound += 1\n",
     "        continue\n",
     "        \n",
+    "    \n",
+    "    if p.IdPaciente not in registrosByCaso.get_group(c).NumeroHistoria.values:\n",
+    "        print('ERROR! Pacientes inconsistente en caso', c, p.IdPaciente)\n",
+    "        countPatientNotFound += 1\n",
+    "        continue\n",
+    "\n",
+    "    if str(p.IdPaciente) not in pacientes.index:\n",
+    "        print('ERROR! Pacientes no encontrado', p.IdPaciente)\n",
+    "        countPatientNotFound += 1\n",
+    "        break\n",
+    "        continue\n",
+    "     \n",
     "    if c in entriesInfirmeryByCase.groups:\n",
     "        entriesInf = entriesInfirmeryByCase.get_group(c)\n",
     "    else:\n",
     "        entriesInf = pandas.DataFrame()\n",
-    "    processedDatasets[c] = birthDatasetStructure.BirthDataset(c, casos.loc[c], p, registrosByCaso.get_group(c), \n",
-    "                                                              pacientes,entriesInf)\n"
+    "    \n",
+    "    data = birthDatasetStructure.BirthDataset(c, casos.loc[c], p, registrosByCaso.get_group(c), \n",
+    "                                                              pacientes,entriesInf)\n",
+    "    if data.epicrisis is not None:\n",
+    "        processedDatasets[c] = data"
    ]
   },
   {
@@ -155,10 +239,31 @@
    "outputs": [],
    "source": [
     "#Look for twins\n",
+    "wrongRegisters = []\n",
+    "print('Errors ! More than one register found')\n",
     "for c, p in processedDatasets.items():\n",
-    "    \n",
-    "    if len(p.registrosRecienNacido) > 1:\n",
-    "        print(c, p.procTypeId,  len(p.registrosRecienNacido))\n"
+    "    if any((r  in getAllDiagnosois(p.epicrisis) for r in ['Z372', 'O300'])) :\n",
+    "        continue\n",
+    "    elif len(p.registrosRecienNacido) > 1 and  any((r  in getAllDiagnosois(p.epicrisis) for r in ['Z370'])) :\n",
+    "        wrongRegisters.append(c)\n",
+    "        print(c, getAllDiagnosois(p.epicrisis),  len(p.registrosRecienNacido))\n",
+    "        continue\n",
+    "    elif len(p.registrosRecienNacido) > 1:\n",
+    "        for k in p.registrosRecienNacido:\n",
+    "            if 'GEMEL' in parsingDatabaseUtils.findInXML('TexTarea_MotivoConsulta', p.registrosRecienNacido[k][k].RegistroXML):\n",
+    "                continue\n",
+    "        print(c, getAllDiagnosois(p.epicrisis),  len(p.registrosRecienNacido))        \n",
+    "        wrongRegisters.append(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in wrongRegisters:\n",
+    "    del processedDatasets[c]"
    ]
   },
   {
@@ -192,16 +297,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 'ASDASD'.split('S')\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -212,11 +307,14 @@
     "breakLoop = False\n",
     "count = 0\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "    if len(p.registrosRecienNacido) > 1:\n",
+    "        print('Warning! I still cannot handle twins')\n",
+    "        continue\n",
     "    resSIP[c] = parsingDatabaseUtils.getMotherData(p)\n",
     "    resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getInformationFromProcedureDescription(p))\n",
     "    for k in p.registrosRecienNacido:\n",
     "        resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getNewbornData(p, k))\n",
-    "    if len(p.registrosRecienNacido):\n",
+    "    if len(p.registrosRecienNacido) == 1:\n",
     "        resSIP[c]['VAR_0286'] = '0'\n",
     "        resSIP[c]['VAR_0285'] = 'A'\n",
     "df = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
@@ -239,7 +337,8 @@
     "    except:\n",
     "        return \"X\"\n",
     "def addZeros(s, d):\n",
-    "    return '0' * (d - len(s)) + s "
+    "    s = str(s)\n",
+    "    return '0' * (d - len(str(s))) + s "
    ]
   },
   {
@@ -251,7 +350,7 @@
     "#Quality control\n",
     "n = len(df)\n",
     "for c in df.columns:\n",
-    "    if sum(df[c] != df[c])/n > .05:\n",
+    "    if sum(df[c] != df[c])/n > .01 and not c.startswith('error'):\n",
     "        print(c, sum(df[c] != df[c])/n )"
    ]
   },
@@ -278,6 +377,10 @@
    "outputs": [],
    "source": [
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "    if len(p.registrosRecienNacido) > 1:\n",
+    "        print('Warning! I still cannot handle twins')\n",
+    "        continue\n",
+    "\n",
     "    res = {}\n",
     "    dfMeasurements = pandas.DataFrame(data = measurements[c], columns =['Campo', 'Fecha', 'Valor'])\n",
     "    dfMeasurements.Valor = dfMeasurements.Valor.map(lambda s: s.replace(',', '.') if isinstance(s, str) else s)\n",
@@ -310,7 +413,7 @@
     "dfResSIP['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
     "dfResSIP['USUARIO'] = 'CMRC-AUTO'\n",
     "\n",
-    "dfResSIP.to_csv('resultsSIP.csv')"
+    "dfResSIP.to_csv('resultsSIP2019.csv')"
    ]
   },
   {
@@ -318,6 +421,130 @@
    "metadata": {},
    "source": [
     "# Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAllDiagnosois(epicrisis):\n",
+    "    xml = ET.fromstring(epicrisis.RegistroXML)\n",
+    "    diagnosisEntrada = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1',xml)]\n",
+    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2',xml)]\n",
+    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3',xml)]\n",
+    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipal',xml)]\n",
+    "    \n",
+    "    diagnosisSalida = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1Salida',xml)]\n",
+    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2Salida',xml)]\n",
+    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3Salida',xml)]\n",
+    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipalSalida',xml)]\n",
+    "    return list(map(lambda s: s.strip(), filter(lambda s:  s, diagnosisSalida +  diagnosisEntrada)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allDiagnosis = set()\n",
+    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "    \n",
+    "    allDiagnosis.update(set(getAllDiagnosois(p.epicrisis)))\n",
+    "    if 'A040' in getAllDiagnosois(p.epicrisis):\n",
+    "        print (p.motherData.Identificacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infecciones = ['O411', '']\n",
+    "anemias = ['D539']\n",
+    "hipertension = ['O109', ]\n",
+    "hemorragia = ['N939']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actionsDiagnosis = {}\n",
+    "actionsDiagnosis['O757'] = 'ignore' #PARTO VAGINAL POSTERIOR A UNA CESAREA PREVIA\n",
+    "actionsDiagnosis['O411'] = 'VAR_0590 = B' #INFECCIÓN DE LA BOLSA AMNIOTICA O DE LAS MEMBRANAS.\n",
+    "actionsDiagnosis['O801'] = 'VAR_0202 = B' #PARTO UNICO ESPONTANEO, PRESENTACION DE NALGAS O PODALICA\n",
+    "actionsDiagnosis['O321'] = 'VAR_0202 = B' #FETO EN PODALICA\n",
+    "\n",
+    "actionsDiagnosis['Z356'] = 'ignore' #ADOLESCENTE EMBARAZADA\n",
+    "actionsDiagnosis['N808'] = 'VAR_0500 = B' #OTRAS ENDOMETRIOSIS\n",
+    "actionsDiagnosis['O364'] = 'VAR_0282 = B' #OBITO FETAL\n",
+    "actionsDiagnosis['Z21X'] = 'VAR_0440 = B' #Expuesto a VIH\n",
+    "actionsDiagnosis['P050'] = 'VAR_0320 = B' #BAJO PESO PARA LA EDAD GESTACIONAL\n",
+    "\n",
+    "actionsDiagnosis['O100'] = 'VAR_0653 = B' #HIPERTENSION CRONICA + PREECLAMPSIA SOBREAGREGAD\n",
+    "actionsDiagnosis['O104'] = 'VAR_0650 = B' #HIPERTENSION SECUNDARIA PREEXISTENTE QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
+    "actionsDiagnosis['O13X'] = 'VAR_0650 = B' #HIPERTENSION SECUNDARIA PREEXISTENTE QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
+    "actionsDiagnosis['O109'] = 'VAR_0650 = B' #HIPERTENSION PREEXISTENTE NO ESPECIFICADA, QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
+    "actionsDiagnosis['O365'] = 'VAR_0634 = B' #HIPERTENSION GESTACIONAL (INDUCIDA POR EL EMBARAZO) SIN PROTEINURIA SIGNIFICATIVA\n",
+    "actionsDiagnosis['O140'] = 'VAR_0651 = B' #PREECLAMPSIA MODERADA -> GB: la paso a severa\n",
+    "actionsDiagnosis['O149'] = 'VAR_0260 = B' #PREECLAMPSIA, NO ESPECIFICADA -> GB: la paso a severa\n",
+    "actionsDiagnosis['I10X'] = 'VAR_0650 = B' #HIPERTENSION ESENCIAL (PRIMARIA)\n",
+    "\n",
+    "\n",
+    "actionsDiagnosis['D62X'] = 'VAR_0620 = B' #ANEMIA POSTHEMORRAGICA AGUDA \n",
+    "actionsDiagnosis['O990'] = 'VAR_0620 = B' #ANEMIA QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
+    "actionsDiagnosis['D508'] = 'VAR_0620 = B' #OTRAS ANEMIAS POR DEFICIENCIA DE HIERRO\n",
+    "actionsDiagnosis['D539'] = 'VAR_0620 = B' #ANEMIA NUTRICIONAL, NO ESPECIFICADA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import parseDiagnosis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a in sorted(allDiagnosis):\n",
+    "    #if a in actionsDiagnosis:\n",
+    "    #    pass\n",
+    "    if a not in diagnosticos.index:\n",
+    "        continue \n",
+    "    if a in parseDiagnosis.actionsDiagnosis:\n",
+    "        print(\"actionsDiagnosis['%s'] = '%s' #%s\"% (a,parseDiagnosis.actionsDiagnosis[a], diagnosticos.loc[a, 'dfg']))\n",
+    "    else: \n",
+    "        print(\"actionsDiagnosis['%s'] = '' #%s\"% (a,diagnosticos.loc[a, 'dfg']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsingDatabaseUtils.prettyPrintXML(p.epicrisis.RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[p.epicrisis.Diagnostico, p.epicrisis.CodigoDiagnosticoRelacionado1,  p.epicrisis.CodigoDiagnosticoRelacionado2, p.epicrisis.CodigoDiagnosticoRelacionado3] "
    ]
   },
   {
