Starting parsing procedures and medicaments in list

--- a/dataReader.ipynb
+++ b/dataReader.ipynb
@@ -422,6 +422,33 @@
    },
    "outputs": [],
    "source": [
+    "for k, (case, pId, _) in tqdm.tqdm_notebook(interventionToCase.items()):\n",
+    "    epi = backgroundByCase[case]\n",
+    "    if epi.iloc[0].CodigoDiagnosticoRelacionado1 == 'O623' and epi.iloc[0].Caso != 'AD210156':\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "import parsingDatabaseUtils\n",
+    "print(epi.iloc[0])\n",
+    "parsingDatabaseUtils.prettyPrintXML(epi.iloc[0].RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
     "def getAllProceduresAndMedicamentsFromCase(registros, Caso):\n",
     "    procedimientos = []\n",
     "    medicamentos = []\n",
@@ -473,7 +500,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "'IM5072','IM5109','IM5365','IM5418','MD0332','MD0333','MD0334','MD0335','MD0336','MD0337','MD0338','MD0679']"
@@ -1498,9 +1527,7 @@
     "Collapsed": "false"
    },
    "outputs": [],
-   "source": [
-    "p"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1544,7 +1571,7 @@
    },
    "outputs": [],
    "source": [
-    "for c,v in interventionToCase.items():\n",
+    "for c,v in veentionToCase.items():\n",
     "    xmlDesc = procedimientos.loc[c].XmlDescripcion\n",
     "    idProc = getProcFromXMLString(procedimientos.loc[c].XmlDescripcion)\n",
     "    if classificationProcedures[idProc] == 'p':\n",
@@ -1654,7 +1681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
