--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import pandas, numpy as np\n",
-    "import parsingDatabaseUtils, re\n",
+    "import parsingDatabaseUtils, re, os\n",
     "import xml, itertools, collections, xml.etree.ElementTree as ET\n",
     "import tqdm, importlib, dateparser, dateparser.search\n",
     "import parseMeasurementsByDay"
@@ -32,7 +32,23 @@
    },
    "outputs": [],
    "source": [
-    "pathFolder = 'casos2019'\n",
+    "pathDataIds = 'Venezolanas'\n",
+    "procedimientosDesc = pandas.read_csv(os.path.join(pathDataIds, 'procedimientosID.csv'), index_col = 0)\n",
+    "registrosByCaso = registros.groupby('Caso')\n",
+    "\n",
+    "diagnosticos = pandas.read_csv(os.path.join(pathDataIds, 'diagnosis.csv'), index_col = 0)\n",
+    "#medicamentos = pandas.read_csv(os.path.join(pathDataIds, 'medicamentos.csv'), index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "pathFolder = 'Venezolanas'\n",
     "casos = pandas.read_csv(pathFolder + '/casos.csv', index_col = 0)\n",
     "pacientes = pandas.read_csv(pathFolder + '/pacientes.csv', index_col = 0)\n",
     "pacientes.index = pacientes.index.map(str)\n",
@@ -44,20 +60,8 @@
     "procedimientos = pandas.read_csv(pathFolder + '/procedimientos.csv', index_col = 0)\n",
     "procedimientos.index = procedimientos.index.map(str)\n",
     "\n",
-    "procedimientosDesc = pandas.read_csv('Venezolanas2/procedimientosID.csv', index_col = 0)\n",
-    "registrosByCaso = registros.groupby('Caso')\n",
-    "\n",
     "entriesInfirmery = pandas.read_csv(pathFolder + '/enfermeriaMedidas.csv', index_col = 0)\n",
     "entriesInfirmeryByCase = entriesInfirmery.groupby('IdAdmision')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diagnosticos = pandas.read_csv('Venezolanas2/diagnosis.csv', index_col = 0)"
    ]
   },
   {
@@ -93,13 +97,6 @@
    "source": [
     "# Identify all  cases with an associated procedure"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -147,42 +144,6 @@
     "                        caseToProcedureBirths[r.Caso] = procedimientos.loc[idDescripcionProcedimiento]\n",
     "            else:\n",
     "                caseToProcedureBirths[r.Caso] = procedimientos.loc[idDescripcionProcedimiento]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(p.IdPaciente                                                    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "registrosByCaso.get_group(c).NumeroHistoria, p.IdPaciente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "186416 in registrosByCaso.get_group(c).NumeroHistoria.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "countPatientNotFound"
    ]
   },
   {
@@ -238,28 +199,52 @@
    },
    "outputs": [],
    "source": [
+    "def getAllDiagnosis(epicrisis):\n",
+    "    xml = ET.fromstring(epicrisis.RegistroXML)\n",
+    "    diagnosisEntrada = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1',xml)]\n",
+    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2',xml)]\n",
+    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3',xml)]\n",
+    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipal',xml)]\n",
+    "    \n",
+    "    diagnosisSalida = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1Salida',xml)]\n",
+    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2Salida',xml)]\n",
+    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3Salida',xml)]\n",
+    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipalSalida',xml)]\n",
+    "    return list(map(lambda s: s.strip(), filter(lambda s:  s, diagnosisSalida +  diagnosisEntrada)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
     "#Look for twins\n",
     "wrongRegisters = []\n",
     "print('Errors ! More than one register found')\n",
     "for c, p in processedDatasets.items():\n",
-    "    if any((r  in getAllDiagnosois(p.epicrisis) for r in ['Z372', 'O300'])) :\n",
+    "    if any((r  in getAllDiagnosis(p.epicrisis) for r in ['Z372', 'O300'])) :\n",
     "        continue\n",
-    "    elif len(p.registrosRecienNacido) > 1 and  any((r  in getAllDiagnosois(p.epicrisis) for r in ['Z370'])) :\n",
+    "    elif len(p.registrosRecienNacido) > 1 and  any((r  in getAllDiagnosis(p.epicrisis) for r in ['Z370'])) :\n",
     "        wrongRegisters.append(c)\n",
-    "        print(c, getAllDiagnosois(p.epicrisis),  len(p.registrosRecienNacido))\n",
+    "        print(c, getAllDiagnosis(p.epicrisis),  len(p.registrosRecienNacido))\n",
     "        continue\n",
     "    elif len(p.registrosRecienNacido) > 1:\n",
     "        for k in p.registrosRecienNacido:\n",
     "            if 'GEMEL' in parsingDatabaseUtils.findInXML('TexTarea_MotivoConsulta', p.registrosRecienNacido[k][k].RegistroXML):\n",
     "                continue\n",
-    "        print(c, getAllDiagnosois(p.epicrisis),  len(p.registrosRecienNacido))        \n",
+    "        print(c, getAllDiagnosis(p.epicrisis),  len(p.registrosRecienNacido))        \n",
     "        wrongRegisters.append(c)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "for c in wrongRegisters:\n",
@@ -269,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -326,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -344,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#Quality control\n",
@@ -357,7 +348,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import parseMeasurementsByDay\n",
@@ -373,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
@@ -396,7 +391,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "import parseDiagnosis\n",
+    "importlib.reload(parseDiagnosis)\n",
+    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "    if len(p.registrosRecienNacido) > 1:\n",
+    "        print('Warning! I still cannot handle twins')\n",
+    "        continue\n",
+    "    s = getAllDiagnosis(p.epicrisis)\n",
+    "    resSIP[c].update(parseDiagnosis.parseDiagnosis(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "dfResSIP = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
@@ -413,100 +428,50 @@
     "dfResSIP['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
     "dfResSIP['USUARIO'] = 'CMRC-AUTO'\n",
     "\n",
-    "dfResSIP.to_csv('resultsSIP2019.csv')"
+    "dfResSIP.to_csv('resultsVenezolanas.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
-    "# Tests"
+    "# Tests\n",
+    "\n",
+    "From here on, it is "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getAllDiagnosois(epicrisis):\n",
-    "    xml = ET.fromstring(epicrisis.RegistroXML)\n",
-    "    diagnosisEntrada = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1',xml)]\n",
-    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2',xml)]\n",
-    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3',xml)]\n",
-    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipal',xml)]\n",
-    "    \n",
-    "    diagnosisSalida = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1Salida',xml)]\n",
-    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2Salida',xml)]\n",
-    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3Salida',xml)]\n",
-    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipalSalida',xml)]\n",
-    "    return list(map(lambda s: s.strip(), filter(lambda s:  s, diagnosisSalida +  diagnosisEntrada)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "allDiagnosis = set()\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
-    "    \n",
-    "    allDiagnosis.update(set(getAllDiagnosois(p.epicrisis)))\n",
-    "    if 'A040' in getAllDiagnosois(p.epicrisis):\n",
-    "        print (p.motherData.Identificacion)"
+    "    allDiagnosis.update(set(getAllDiagnosis(p.epicrisis)))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
-    "infecciones = ['O411', '']\n",
-    "anemias = ['D539']\n",
-    "hipertension = ['O109', ]\n",
-    "hemorragia = ['N939']"
+    "allDiagnosis = set(list(allDiagnosis) + list(parseDiagnosis.actionsDiagnosis.keys()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actionsDiagnosis = {}\n",
-    "actionsDiagnosis['O757'] = 'ignore' #PARTO VAGINAL POSTERIOR A UNA CESAREA PREVIA\n",
-    "actionsDiagnosis['O411'] = 'VAR_0590 = B' #INFECCIÓN DE LA BOLSA AMNIOTICA O DE LAS MEMBRANAS.\n",
-    "actionsDiagnosis['O801'] = 'VAR_0202 = B' #PARTO UNICO ESPONTANEO, PRESENTACION DE NALGAS O PODALICA\n",
-    "actionsDiagnosis['O321'] = 'VAR_0202 = B' #FETO EN PODALICA\n",
-    "\n",
-    "actionsDiagnosis['Z356'] = 'ignore' #ADOLESCENTE EMBARAZADA\n",
-    "actionsDiagnosis['N808'] = 'VAR_0500 = B' #OTRAS ENDOMETRIOSIS\n",
-    "actionsDiagnosis['O364'] = 'VAR_0282 = B' #OBITO FETAL\n",
-    "actionsDiagnosis['Z21X'] = 'VAR_0440 = B' #Expuesto a VIH\n",
-    "actionsDiagnosis['P050'] = 'VAR_0320 = B' #BAJO PESO PARA LA EDAD GESTACIONAL\n",
-    "\n",
-    "actionsDiagnosis['O100'] = 'VAR_0653 = B' #HIPERTENSION CRONICA + PREECLAMPSIA SOBREAGREGAD\n",
-    "actionsDiagnosis['O104'] = 'VAR_0650 = B' #HIPERTENSION SECUNDARIA PREEXISTENTE QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
-    "actionsDiagnosis['O13X'] = 'VAR_0650 = B' #HIPERTENSION SECUNDARIA PREEXISTENTE QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
-    "actionsDiagnosis['O109'] = 'VAR_0650 = B' #HIPERTENSION PREEXISTENTE NO ESPECIFICADA, QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
-    "actionsDiagnosis['O365'] = 'VAR_0634 = B' #HIPERTENSION GESTACIONAL (INDUCIDA POR EL EMBARAZO) SIN PROTEINURIA SIGNIFICATIVA\n",
-    "actionsDiagnosis['O140'] = 'VAR_0651 = B' #PREECLAMPSIA MODERADA -> GB: la paso a severa\n",
-    "actionsDiagnosis['O149'] = 'VAR_0260 = B' #PREECLAMPSIA, NO ESPECIFICADA -> GB: la paso a severa\n",
-    "actionsDiagnosis['I10X'] = 'VAR_0650 = B' #HIPERTENSION ESENCIAL (PRIMARIA)\n",
-    "\n",
-    "\n",
-    "actionsDiagnosis['D62X'] = 'VAR_0620 = B' #ANEMIA POSTHEMORRAGICA AGUDA \n",
-    "actionsDiagnosis['O990'] = 'VAR_0620 = B' #ANEMIA QUE COMPLICA EL EMBARAZO, EL PARTO Y EL PUERPERIO\n",
-    "actionsDiagnosis['D508'] = 'VAR_0620 = B' #OTRAS ANEMIAS POR DEFICIENCIA DE HIERRO\n",
-    "actionsDiagnosis['D539'] = 'VAR_0620 = B' #ANEMIA NUTRICIONAL, NO ESPECIFICADA\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import parseDiagnosis"
@@ -515,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "for a in sorted(allDiagnosis):\n",
@@ -532,7 +499,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "parsingDatabaseUtils.prettyPrintXML(p.epicrisis.RegistroXML)"
@@ -541,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "[p.epicrisis.Diagnostico, p.epicrisis.CodigoDiagnosticoRelacionado1,  p.epicrisis.CodigoDiagnosticoRelacionado2, p.epicrisis.CodigoDiagnosticoRelacionado3] "
@@ -583,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "pacientes.loc[str(casos.loc[noIngreso[0], 'Paciente'])], noIngreso[0], casos.loc[noIngreso[0]]"
@@ -612,7 +585,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   },
@@ -730,6 +705,70 @@
    },
    "outputs": [],
    "source": [
+    "for p, d in processedDatasets.items():\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "getMedicamentsAndpProcedures(d.epicrisis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "from html.parser import HTMLParser\n",
+    "pars =HTMLParser()\n",
+    "\n",
+    "def splitByDate(txt):\n",
+    "    txt = pars.unescape(txt)\n",
+    "    txtByDate = txt.split('Fecha:')\n",
+    "    txtByDate = map(lambda s: s.strip(), txtByDate)\n",
+    "    txtByDate = {m.split()[0] : m for m in txtByDate if m}\n",
+    "            print(m)\n",
+    "\n",
+    "    processedByDate = {}\n",
+    "    for v,m in txtByDate.items():\n",
+    "        processedByDate[v] =  re.findall('-([0-9a-zA-Z\\- ]+) - (.+?)- Cantidad: ([0-9]+)', m, re.MULTILINE)\n",
+    "    return processedByDate\n",
+    "def getMedicamentsAndpProcedures(epicrisis):\n",
+    "    et = ET.fromstring(epicrisis.RegistroXML)\n",
+    "    medicamentos = parsingDatabaseUtils.findInXML('MedicamentosAdministrado' , et)\n",
+    "    procedimientos = parsingDatabaseUtils.findInXML('ProcedimientosAsociados' , et)\n",
+    "    #return medicamentos, procedimientos\n",
+    "    return splitByDate(medicamentos), splitByDate(procedimientos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "parsingDatabaseUtils.prettyPrintXML(d.epicrisis.RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
     "for c, p in paraClinics.items():\n",
     "    if len(p) != 1:\n",
     "        print(paraClinics[c]['text'])\n",
@@ -774,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
